--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,7 +19,7 @@
     />
     <title>Proyectos Fundacite</title>
     <link rel="manifest" href="/manifest.json" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/logo.ico" />
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app </noscript>
